Revert "Rydding i serveroppsett og flyway (#1259)"
This reverts commit 33437121fc3d0d150ba5c272986897a3f7bda078.